--- a/templates/index.html
+++ b/templates/index.html
@@ -314,21 +314,6 @@
         color: #0c59c4;
       }
 
-      .leaflet-popup-content {
-        font-size: 14px;
-        line-height: 1.4;
-      }
-
-      @media (max-width: 600px) {
-        .leaflet-popup-content {
-          font-size: 16px;
-        }
-
-        #job-map {
-          height: 400px;
-        }
-      }
-
       .leaflet-popup-content-wrapper {
         max-width: 250px;
         padding: 8px 10px;
@@ -336,12 +321,25 @@
       }
 
       .leaflet-popup-content {
+        font-size: 14px;
+        line-height: 1.4;
         color: #111;
         font-weight: 500;
       }
 
       .dark-mode .leaflet-popup-content {
         color: #e0e0e0;
+      }
+
+      @media (max-width: 600px) {
+        .leaflet-popup-content {
+          font-size: 16px;
+          padding: 8px 12px;
+        }
+
+        #job-map {
+          height: 400px;
+        }
       }
     </style>
     <link
